minor: change category name from cover letter to transcript
